--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,17 @@
-steps:
-  # 1. Python環境をセットアップ
-  - name: 'python:3.9'
-    entrypoint: 'pip'
-    args: ['install', 'nbconvert', 'papermill']
+options:
+  logging: CLOUD_LOGGING_ONLY  # Cloud Logging のみに変更
 
-  # 2. ノートブックを Python スクリプトに変換
+steps:
+  - name: 'python:3.9'
+    entrypoint: 'sh'
+    args: ['-c', 'pip install --upgrade pip && pip install nbconvert papermill']
+
   - name: 'python:3.9'
     entrypoint: 'jupyter'
     args: ['nbconvert', '--to', 'script', 'ClinicalTrials_gov_API.ipynb']
 
-  # 3. ノートブックを自動実行し、結果を保存
   - name: 'python:3.9'
     entrypoint: 'papermill'
     args: ['ClinicalTrials_gov_API.ipynb', 'output.ipynb']
-
-  # 4. 実行結果を GitHub にプッシュ（オプション）
-  - name: 'gcr.io/cloud-builders/git'
-    entrypoint: 'sh'
-    args:
-      - '-c'
-      - |
-        git config --global user.email "cloudbuild@example.com"
-        git config --global user.name "Cloud Build"
-        git add output.ipynb
-        git commit -m "Automated execution result"
-        git push origin main
 
 timeout: 600s
