--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,10 +4,16 @@ options:
 steps:
   - name: 'python:3.9-slim'
     entrypoint: 'sh'
-    args: ['-c', 'pip install --upgrade pip && pip install -r requirements.txt']
+    args:
+      - '-c'
+      - |
+        ls -al  # `requirements.txt` がリポジトリにあるか確認
+        cat requirements.txt  # 中身を確認
+        pip install --upgrade pip &&
+        pip install -r requirements.txt
 
   - name: 'python:3.9-slim'
     entrypoint: 'python'
-    args: ['ClinicalTrials_gov_API.py']  # Jupyter Notebook ではなく、スクリプトとして実行
+    args: ['ClinicalTrials_gov_API.py']
 
 timeout: 600s
